Fixed spacing added readme

--- a/swtextcrawl.css
+++ b/swtextcrawl.css
@@ -8,7 +8,7 @@
   .fade {
     position: relative;
     width: 100%;
-    min-height: 60vh;
+    min-height: 20vh;
     top: -25px;
     background-image: linear-gradient(0deg, transparent, black 75%);
     z-index: 1;
